--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,12 @@
     <div class ="sortBy">
       <nav class ="navOrden">Ordenar Por:
         <ul class = "sortOptions">
-          <li id="athleteAtoZ">Edad Atleta: Mayor a Menor</li>
-          <li id="athleteZtoA">Edad Atleta: Menor a Mayor</li>
-          <li id="youngestToOldest">Nombre Atleta A - Z</li>
-          <li id="oldestToYoungest">Nombre Atleta Z - A</li>
-          <li>País A - Z</li>
-          <li>País Z - A</li>
+          <li id="oldestToYoungest">Edad Atleta: Mayor a Menor</li>
+          <li id="youngestToOldest">Edad Atleta: Menor a Mayor</li>
+          <li id="athleteAtoZ">Nombre Atleta A - Z</li>
+          <li id="athleteZtoA">Nombre Atleta Z - A</li>
+          <li id="teamAtoZ">País A - Z</li>
+          <li id="teamZtoA">País Z - A</li>
         </ul>
       </nav>
     </div> 
