--- a/src/index.html
+++ b/src/index.html
@@ -53,22 +53,25 @@
       <button id="buscar">Search</button>
     </div>
     <br>
-    <div id="boxSortBy">
-      <div class ="sortBy">
-        <button class="order"> SortBy </button>
-          <div class="sortOptions">
-           <a  id="oldestToYoungest"> Age(Oldest to Youngest)</a>
-           <a  id="youngestToOldest"> Age(Youngest to Oldest)</a>
-           <a  id="athleteAtoZ"> Name(A to Z)</a>
-           <a  id="athleteZtoA"> Name(Z to A)</a>
-           <a  id="teamAtoZ"> Team(A to Z)</a>
-           <a  id="teamZtoA"> Team(Z to A)</a>
-          </div> 
-      </div>   
-    </div>
+      <div id="boxSortBy">
+        <div class ="sortBy">
+         <button class="order"> SortBy </button>
+            <div class="sortOptions">
+            <a  id="oldestToYoungest"> Age(Oldest to Youngest)</a>
+             <a  id="youngestToOldest"> Age(Youngest to Oldest)</a>
+             <a  id="athleteAtoZ"> Name(A to Z)</a>
+            <a  id="athleteZtoA"> Name(Z to A)</a>
+            <a  id="teamAtoZ"> Team(A to Z)</a>
+            <a  id="teamZtoA"> Team(Z to A)</a>
+            </div> 
+        </div>   
+      </div>
+      <div class="top10">
+        <button class="btnTop10"><a href="top.html">Top 10</a></button>
+      </div>
       <br>
       <br>
-      <div id="general"> 
+    <div id="general"> 
       <div id="pet1"><img src='https://i.pinimg.com/564x/7b/fa/d4/7bfad41fcd75ae387c1b900ce0a0c01b.jpg'> </div>
       <div id="cartillaContenedor"></div>
       <div id="pet2"><img src="https://i.pinimg.com/originals/2f/40/db/2f40db15613dd4e8ae7d2ea7778804f9.png"> </div>
