--- a/src/paises.html
+++ b/src/paises.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header> 
-      <h1> JUEGOS OLIMPICOS RIO DE JANEIRO 2016 <img id="logo2016" src="https://img.olympicchannel.com/images/image/private/w_300/f_auto/primary/fzntd3nnabdno6x16pns"> </h1>
+      <h1> TOP 10 ATLETAS CON MÁS EMEDALLAS<img id="logo2016" src="https://img.olympicchannel.com/images/image/private/w_300/f_auto/primary/fzntd3nnabdno6x16pns"> </h1>
     </header>
     <div class="div1">
       <nav class="menu">
