funcionan las funciones que sacan el % de cada tipo de medalla en statistics.js

--- a/src/statistics.html
+++ b/src/statistics.html
@@ -26,6 +26,6 @@
       <div id="pet3"><img src='https://www.nicepng.com/png/full/557-5573812_mascotas-rio-2016-mascota-de-los-juegos-olimpicos.png'> </div>
       <div id="statisticsCont"></div>
     </div>
-    <script src="main.js" type="module"></script>
+    <script src="statistics.js" type="module"></script>
   </body>
 </html>
