--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav class="division">
           <a href="index.html">Athletes</a>
-         <a href="">Sports</a>
+         <a href="statistics.html">Statistics</a>
         </nav>
       </div>
     </header>
