Lista con los jugadores de cada medalla y botón de expandir lista

--- a/src/statistics.html
+++ b/src/statistics.html
@@ -24,7 +24,27 @@
     </div>
     <div id="generalStats">
       <div id="pet3"><img src='https://www.nicepng.com/png/full/557-5573812_mascotas-rio-2016-mascota-de-los-juegos-olimpicos.png'> </div>
-      <div id="statisticsCont"></div>
+      <div id="statisticsCont"><h1>Percentage of Athletes per Medal Type</h1>
+        <div id="goldMedal">
+          <h2>Athletes that won Gold</h2>
+          <p id="gold%"></p>
+          <ul id="goldNames">
+          </ul>
+          <button class="expandButton">See more</button>
+        </div>
+        <div id="silverMedal">
+          <h2>Athletes that won Silver</h2>
+          <p id="silver%"></p>
+          <ul id="silverNames"></ul>
+          <button class="expandButton">See more</button>
+        </div>
+        <div id="bronzeMedal">
+          <h2>Athletes that won Bronze</h2>
+          <p id="bronze%"></p>
+          <ul id="bronzeNames"></ul>
+          <button class="expandButton">See more</button>
+        </div>
+      </div>
     </div>
     <script src="statistics.js" type="module"></script>
   </body>
