--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Data Lovers-DL3</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/d73e2e89e3.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header> 
@@ -67,7 +68,9 @@
         </div>   
       </div>
       <div class="top10">
-        <button class="btnTop10"><a href="top.html">Top 10</a></button>
+        <a href="top.html">
+          <button><i class="fa-solid fa-star"></i><br>Top 10</button>
+        </a>
       </div>
       <br>
       <br>
