--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,11 @@
             </ul>>
           <a>Sport</a>
           <ul id="sport">
-            <a id=> x </a>
-            <a id=> x </a>
-            <a id=> x </a>
-            <a id=> x </a>
-            <a id=> x </a>
+            <a id="gymnastics"> Gymnastics </a>
+            <a id="swimming"> Swimming </a>
+            <a id="basketball"> Basketball </a>
+            <a id="volleyball"> Volleyball </a>
+            <a id="football"> Football </a>
           </ul>>
           <a>Gender</a>
           <ul id="gender">
