--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
       </a>
     </div>
     <div id="general2">
-      <div id="pet3"><img id="mascotasJuntas" src='https://www.nicepng.com/png/full/557-5573812_mascotas-rio-2016-mascota-de-los-juegos-olimpicos.png'> </div>
+      <div id="pet3"><img id="mascotasJuntas" src="https://www.nicepng.com/png/full/557-5573812_mascotas-rio-2016-mascota-de-los-juegos-olimpicos.png"> </div>
       <div id="topContainer"></div>
     </div>
     <script src="main.js" type="module"></script>
@@ -116,7 +116,7 @@
       </div>
       <div><h1 class="headingStats">Percentage of type of medals won</h1></div><br>
       <div id="generalStats">
-        <div id="pet4"><img src='https://i.pinimg.com/564x/7a/b9/6f/7ab96f0bc75d2181d048d8a46f458ec7.jpg'> </div>
+        <div id="pet4"><img src="https://i.pinimg.com/564x/7a/b9/6f/7ab96f0bc75d2181d048d8a46f458ec7.jpg"> </div>
         <div id="statisticsCont">
           <div class = "cardsAth" id="goldMedal">
             <img id="imgoro" src="https://i.pinimg.com/564x/e7/66/81/e76681d8256345f7ac12f37f19dc71f4.jpg">
