css/html adjustments

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       </div>
       <nav class="navigation-page">
         <a id="Athletes">Athletes </a>
+        <a id="Top10Athletes">Top 10 Athletes</a>
         <a id="Statistics">Statistics </a>
       </nav>
       <div id="img-container">
@@ -72,7 +73,7 @@
     <section class = "sort-top10">
       <div id="boxSortBy" class="toggleOptions">
         <div class="sortBy">
-          <button class="order"> SortBy </button>
+          <button class="order">SortBy</button>
           <div class="sortOptions">
             <a id="oldestToYoungest"> Age(Oldest to Youngest)</a>
             <a id="youngestToOldest"> Age(Youngest to Oldest)</a>
@@ -97,9 +98,7 @@
         </div>
         <div id="athletes-info">
         </div>
-        <div id="pet2"><img id="petgreen"
-            src="https://i.pinimg.com/originals/2f/40/db/2f40db15613dd4e8ae7d2ea7778804f9.png">
-        </div>
+        
       </div>
     </main>
 
@@ -108,6 +107,7 @@
 
   <!--PAGINA TOP10-->
   <section id="top-athletes-page" class="page">
+    <h2 class="top10-title">TOP 10 ATHLETES</h2>
     <div class="homeButton">
       <a>
         <button id="home-icon" class="homeBtn"><i class="fa-solid fa-house"></i></button>
@@ -124,30 +124,30 @@
 
   <!--PAGINA STATISTICS-->
   <section id="statistics-page" class="page">
+    <h1 class="headingStats">MEDAL DISTRIBUTION PERCENTAGE</h1>
     <div class="homeButton">
       <a>
         <button id="home-icon2" class="homeBtn"><i class="fa-solid fa-house"></i></button>
       </a>
     </div>
     <div>
-      <h1 class="headingStats">PERCENTAGE OF TYPE OF MEDALS WON</h1>
     </div><br>
     <div id="generalStats">
       <div id="pet4"><img src="https://i.pinimg.com/564x/7a/b9/6f/7ab96f0bc75d2181d048d8a46f458ec7.jpg"> </div>
       <div id="statisticsCont">
         <div class="cardsAth" id="goldMedal">
+          <h2>Golden Medals</h2>
           <img id="imgoro" src="https://i.pinimg.com/564x/e7/66/81/e76681d8256345f7ac12f37f19dc71f4.jpg">
-          <h2>% Golden Medals</h2>
           <p class="percentages" id="gold%"></p>
         </div>
         <div class="cardsAth" id="silverMedal">
+          <h2>Silver Medals</h2>
           <img id="imgplata" src="https://i.pinimg.com/564x/8b/32/32/8b32323f5ce8e8cb6b1b6fb50bbdd1c4.jpg">
-          <h2>% Silver Medals </h2>
           <p class="percentages" id="silver%"></p>
         </div>
         <div class="cardsAth" id="bronzeMedal">
+          <h2>Bronze Medals</h2>
           <img id="imgbronce" src="https://i.pinimg.com/564x/4e/40/e1/4e40e13c34e69143207f44f540012e6b.jpg">
-          <h2>%Bronze Medals</h2>
           <p class="percentages" id="bronze%"></p>
         </div>
       </div>
